--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "csv-to-html-service"
-version = "0.1.0"
+version = "0.2.2"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -9,3 +9,5 @@ edition = "2021"
 actix-web = "4.4.1"
 csv-to-html = "0.5.10"
 env_logger = "0.10.1"
+serde = "1.0.194"
+serde_derive = "1.0.194"
